force-app/main/default/objects/FulfillmentDateMatrix__c/FulfillmentDateMatrix__c.object-meta.xml
<CustomObject>
    <description>Contiene la matrice per il calcolo della data di decorrenza</description>
    <label>Matrice Data Adempimento</label>
    <nameField>
        <label>Matrice Data Adempimento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrici Data Adempimento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>