force-app/main/default/objects/FulfillmentDateMatrix__c/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <label>Data Attivazione</label>
    <type>Date</type>
</CustomField>