force-app/main/default/objects/FulfillmentDateMatrix__c/fields/FulfillmentDateFrom__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentDateFrom__c</fullName>
    <label>Data Adempimento da</label>
    <type>Date</type>
</CustomField>