force-app/main/default/objects/FulfillmentDateMatrix__c/fields/FulfillmentDateTo__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentDateTo__c</fullName>
    <label>Data Adempimento a</label>
    <type>Date</type>
</CustomField>