force-app/main/default/objects/FulfillmentDateMatrix__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio offerta</fullName>
            </value>
            <value>
                <fullName>Switch In</fullName>
            </value>
            <value>
                <fullName>Switch In Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>