force-app/main/default/objects/FulfillmentDateMatrix__c/fields/SupplyType__c.field-meta.xml
<CustomField>
    <fullName>SupplyType__c</fullName>
    <label>Tipo Fornitura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SupplyType</valueSetName>
    </valueSet>
</CustomField>