force-app/main/default/objects/FulfillmentDateMatrix__c/fields/VoltageLevel__c.field-meta.xml
<CustomField>
    <fullName>VoltageLevel__c</fullName>
    <label>Tensione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Voltage</valueSetName>
    </valueSet>
</CustomField>